@@ -1,0 +1,14 @@
+/*
+ * Styles for Devise views
+ * generated by the rails_layout gem
+ */
+
+.devise {
+  padding-top: 30px;
+  max-width: 320px;
+  margin: 0 auto;
+}
+.devise h3 {
+  margin-bottom: 20px;
+  text-align: left;
+}
