@@ -1,0 +1,26 @@
+<div class="devise">
+  <%= form_for(resource, :as => resource_name, :url => session_path(resource_name), :html => { :role => 'form', :class => 'well well-lg'}) do |f| %>
+    <h3>Log In</h3>
+    <%= devise_error_messages! %>
+    <div class="form-group">
+      <%- if devise_mapping.registerable? %>
+        <%= link_to 'Sign up', new_registration_path(resource_name), class: 'pull-right'  %>
+      <% end -%>
+      <%= f.label :email %><br />
+      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+        <%= link_to "Forgot password?", new_password_path(resource_name), class: 'pull-right' %>
+      <% end -%>
+      <%= f.label :password %><br />
+      <%= f.password_field :password, class: 'form-control' %>
+    </div>
+      <%= f.submit 'Log in', :class => 'btn btn-primary pull-right' %>
+    <% if devise_mapping.rememberable? -%>
+      <div class="checkbox">
+        <%= f.check_box :remember_me %> <%= f.label :remember_me %>
+      </div>
+    <% end -%>
+  <% end %>
+</div>
